fixed category value

--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Philip Cutler <greenthegarden@gmail.com>
 maintainer=Philip Cutler <greenthegarden@gmail.com>
 sentence=My version of the DHTLib.
 paragraph=
-category=Sensor
+category=Sensors
 url=https://github.com/greenthegarden/DHT
-architectures=Ardino
+architectures=Arduino
