--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=My version of the DHTLib.
 paragraph=
 category=Sensors
 url=https://github.com/greenthegarden/DHT
-architectures=Arduino
+architectures=avr
