--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,13 @@ paragraph=
 category=Sensors
 url=https://github.com/greenthegarden/DHT
 architectures=avr
+
+name=DHT
+version=0.1.29
+author=Rob Tillaart <rob.tillaart@gmail.com>
+maintainer=Rob Tillaart <rob.tillaart@gmail.com>
+sentence=Optimized Library for DHT Temperature & Humidity Sensor on AVR only. 
+paragraph= 
+category=Sensors
+url=https://github.com/greenthegarden/DHT
+architectures=avr
