--- a/library.properties
+++ b/library.properties
@@ -1,17 +1,7 @@
-name=DHT
-version=1.0
-author=Philip Cutler <greenthegarden@gmail.com>
-maintainer=Philip Cutler <greenthegarden@gmail.com>
-sentence=My version of the DHTLib.
-paragraph=
-category=Sensors
-url=https://github.com/greenthegarden/DHT
-architectures=avr
-
-name=DHT
+name=DHT22Config
 version=0.1.29
 author=Rob Tillaart <rob.tillaart@gmail.com>
-maintainer=Rob Tillaart <rob.tillaart@gmail.com>
+maintainer=Philip Cutler <greenthegarden@gmail.com>
 sentence=Optimized Library for DHT Temperature & Humidity Sensor on AVR only. 
 paragraph= 
 category=Sensors
