renamed status config file

--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=DHT22Config
+name=dht
 version=0.1.29
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Philip Cutler <greenthegarden@gmail.com>
